syntax = "proto3";

option go_package = "./pkg/proto";

service KeyGrpcService {
    rpc GetPrivateKey(GetPrivateKeyRequestDto) returns (GetPrivateKeyResponseDto);
    rpc GetPublicKey(GetPublicKeyRequestDto) returns (GetPublicKeyResponseDto);
}

message GetPrivateKeyRequestDto {
  }

message GetPrivateKeyResponseDto {
    string privateKey = 1;
  }

message GetPublicKeyRequestDto {
  }

message GetPublicKeyResponseDto {
    string publicKey = 1;
  }
